Fix table content overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1879,8 +1879,7 @@ html {
   .table_content {
     width: calc(100% - 30px);
     margin-left: 30px;
-    background: #D8EEFA;
-    overflow: auto; }
+    background: #D8EEFA; }
     .table_content.world-fleet {
       background: #fff; }
       .table_content.world-fleet > .table_content-data {
