--- a/assets/css/table.scss
+++ b/assets/css/table.scss
@@ -85,7 +85,6 @@ html {
         width: calc(100% - 30px);
         margin-left: 30px;
         background: #D8EEFA;
-        overflow: auto;
         &.world-fleet {
             background: #fff;
             &>.table_content-data {
